# cim-to-owl

./: .gitignore  .gitmodules  README.md  download_data.sh  initial_context.json  json_cim_to_rdfs.jq  pyproject.toml  schema_to_mapping.sh
config/: initial_context.json  namespaces.json
jq/: cim_to_shacl.jq  json_clean.jq  words_ending_in_s.json
meta/: context.jsonld  esdoc-cim-schema.json  owl.jsonld  owl.ttl  rdfs.jsonld  rdfs.ttl  shacl.jsonld  shacl.ttl
src/cim_to_owl/: convert.py  data_clean.py  generate_shacl.py  map_data.py  py_cim_to_json.py
