[tool.poetry]
name = "cim-to-owl"
version = "0.1.0"
description = "Converting ES-DOC Common Information Model (CIM) to OWL"
authors = ["Miguel Ceriani <miguel.ceriani@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = true

packages = [
    { include = "cim_to_owl", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
jq = "^1.7.0"
rdflib = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate_shacl = 'cim_to_owl.generate_shacl:run'
test = 'cim_to_owl.test_generate:run'
data_clean = 'cim_to_owl.data_clean:run'
map_data = 'cim_to_owl.map_data:run'
